--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -14,7 +14,7 @@
       <div class="content">
         <section class="top_section">
           <div class="image_container">
-            <img src="./image.png" alt="tribute" />
+            <img src="./apj-abdul-kalam.png" alt="tribute" />
           </div>
           <div>
             <h1>A. P. J   ABDUL KALAM</h1>
